Fix Account Names being cropped

--- a/ui/app/css/itcss/components/account-menu.scss
+++ b/ui/app/css/itcss/components/account-menu.scss
@@ -87,7 +87,6 @@
     flex: 1 0 auto;
     display: flex;
     flex-flow: column nowrap;
-    padding-top: 4px;
   }
 
   &__check-mark {
@@ -115,13 +114,11 @@
     color: $white;
     font-size: 18px;
     font-weight: 300;
-    line-height: 16px;
   }
 
   &__balance {
     color: $dusty-gray;
     font-size: 14px;
-    line-height: 19px;
   }
 
   &__action {
